--- a/src/components/data/EditableTable/RowActions/RowActions.module.scss
+++ b/src/components/data/EditableTable/RowActions/RowActions.module.scss
@@ -5,6 +5,6 @@
 .removeRowIcon {
   color: $errorColor !important;
   &:hover {
-    background-color: color.change($primaryColor, $alpha: .15) !important;
+    background-color: color.change($primaryColor, $alpha: 0.15) !important;
   }
 }
